add the notoken feature
